--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 static/img/** filter=lfs diff=lfs merge=lfs -text
+static/audio/** filter=lfs diff=lfs merge=lfs -text
+static/video/** filter=lfs diff=lfs merge=lfs -text
+static/pdf/** filter=lfs diff=lfs merge=lfs -text
